--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -17,7 +17,7 @@
 			<ui:define name="mainContent">
 				<h2>Payer Details</h2>
 				
-				<h:form rendered="#{sharedData.currentUser.permission.canPayerAdd}">
+				<h:form>
 					<p:commandButton value="Create" update=":myForm"
 						action="#{payerController.clearData()}"
 								oncomplete="PF('Dlg1').show();"
@@ -64,7 +64,6 @@
 						
 						<p:column headerText="Edit"
 						 width="80"
-						 rendered="#{sharedData.currentUser.permission.canPayerEdit}"
 						 >
 							<p:commandButton icon="ui-icon-pencil" update=":myForm"
 								oncomplete="PF('Dlg1').show();" 
