--- a/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
@@ -67,6 +67,10 @@
 						<p:column headerText="Practice Name">
 							#{transaction.practice.name}
 						</p:column>
+						
+						<p:column headerText="Provider Name">
+							#{transaction.provider.name}
+						</p:column>
 
 						<p:column headerText="Date">
 							#{transaction.transactionDate}
@@ -74,6 +78,10 @@
 						
 						<p:column headerText="Type">
 							#{transaction.transactionType}
+						</p:column>
+						
+						<p:column headerText="Status">
+							#{transaction.parStatus}
 						</p:column>
 						
 						<p:column headerText="Comments">
