--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -97,9 +97,9 @@
 							#{payer.name}
 						</p:column>
 
-						<p:column headerText="Company Name">
+						<!-- <p:column headerText="Company Name">
 							#{payer.companyName}
-						</p:column>
+						</p:column> -->
 						
 						<p:column headerText="Plan Name">
 							#{payer.planName}
