--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -114,7 +114,7 @@
 						
 						
 						<p:selectCheckboxMenu id="myPractices" value="#{providerController.selectedPractices}" label="Select Practices"
-				            filter="true" filterMatchMode="startsWith" style="width:177px" var="t" required="true"
+				            filter="true" filterMatchMode="startsWith" style="width:177px" var="t"
 				            converter="practiseConverter" panelStyle="width:250px">
 				            
 				            <f:selectItems value="#{providerController.practiceList}" var="practice"
