--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -140,7 +140,7 @@
 							#{payer.planName}
 						</p:column>
 						
-						<p:column headerText="Phone Number">
+						<!-- <p:column headerText="Phone Number">
 							#{payer.phoneNumber}
 						</p:column>
 						
@@ -158,7 +158,7 @@
 						
 						<p:column headerText="ZipCode">
 							#{payer.zip}
-						</p:column>
+						</p:column> -->
 		
 					</p:dataTable>  
 
