--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -105,7 +105,7 @@
 							#{payer.planName}
 						</p:column>
 						
-						<p:column headerText="Phone Number">
+						<!-- <p:column headerText="Phone Number">
 							#{payer.phoneNumber}
 						</p:column>
 						
@@ -123,7 +123,7 @@
 						
 						<p:column headerText="ZipCode">
 							#{payer.zip}
-						</p:column>
+						</p:column> -->
 		
 					</p:dataTable>  
 
