--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -128,7 +128,7 @@
 						
 						
 					  <p:selectCheckboxMenu value="#{providerController.selectedPayers}" label="Select Payers"
-				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t" required="true"
+				            filter="false" filterMatchMode="startsWith" style="width:177px"  var="t" required="true"
 				            converter="payerConverter" panelStyle="width:250px">
 				            
 				            <f:selectItems value="#{providerController.payerList}" var="payer"
