--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -21,7 +21,7 @@
 
 				<h:form
 					rendered="#{sec:areAnyGranted('ROLE_ROOT_ADMIN,ROLE_ROOT_USER')}">
-					<p:commandButton value="Create" update=":addForm"
+					<p:commandButton id="btnCreate" value="Create" update=":addForm"
 						actionListener="#{entityController.createPressed()}"
 						oncomplete="PF('addDlg').show();" />
 
@@ -63,11 +63,13 @@
 
 				<!-- CREATE ENTITY -->
 
-				<p:dialog header="Add" widgetVar="addDlg" position="top"
-					modal="true" minHeight="40">
+				<p:dialog fitViewport="true" id="addDlg" header="Add"
+					widgetVar="addDlg" position="center" modal="true" minHeight="40"
+					
+					>
 
 					<h:form id="addForm">
-
+						 <p:blockUI block="addForm" trigger="btnSave" />
 						<p:messages id="msgs" />
 						<h:panelGrid columns="2" cellpadding="5">
 
@@ -78,26 +80,23 @@
 
 						</h:panelGrid>
 
-						<p:commandButton value="Save"
+						<p:commandButton id="btnSave" value="Save"
 							actionListener="#{entityController.saveButtonPressed()}"
 							update="addForm, msgs, :entityTable" />
 
-						<!-- <div>
-							Entity Name:
-							<p:inputText value="#{entityController.entity.name}" />
-
-							<br />
-							<br />
-							<p:commandButton value="Save"
-								action="#{entityController.createPressed()}"
-								oncomplete="PF('addDlg').hide();" update="addForm, :entityTable" />
-
-						</div> -->
 					</h:form>
 
 				</p:dialog>
 
-
+				<script type="text/javascript">
+function adjustPositionning(sourceElement, dialog) {
+    var x = sourceElement.offset().left;
+    var y = sourceElement.offset().top;
+    var width = sourceElement.width();
+    var padding = 15;
+  dialog.parent().offset({ top: y, left: x + width + padding });
+}
+</script>
 
 			</ui:define>
 		</ui:composition>
