--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -31,7 +31,7 @@
 				    <p:dataTable value="#{providerController.providerList}" var="provider" >
 
 						<p:column headerText="Provider Name">
-							#{provider.name}
+							#{provider.firstName} #{provider.lastName}
 						</p:column>
 
 						<p:column headerText="Npi Number">
@@ -141,8 +141,10 @@
 				        </p:selectCheckboxMenu> 
 						
 				  	 
-				  	 	<p:inputText id="ProviderName" value="#{providerController.provider.name}" placeholder="Provider Name" required="true" />
+				  	 	
 			            <p:inputText id="NpiNumber" value="#{providerController.provider.npiNum}" placeholder="Npi Number" required="true" /> 
+			            <p:inputText value="#{providerController.provider.firstName}" placeholder="First Name" required="true" />
+			            <p:inputText value="#{providerController.provider.lastName}" placeholder="Last Name" required="true" />
 			            
 			       
 			        </h:panelGrid>   
